tests/sksl/errors/ArrayTooManyDimensionsInFuncDecl.dsl.glsl
### Compilation failed:

error: arrays are not yet fully supported
error: expected ')', but found '2'
2 errors
